--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1447,12 +1447,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61044acb",
+   "cell_type": "markdown",
+   "id": "09521e02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Analizom podataka ustanovljen je očigledan trend koji se javlja tokom proteklog vremena tako da u određenim delovima godine dolazi do promene u prodaji proizvoda.\n",
+    "\n",
+    "Klasteri su raspodelili podatke uglavnom po ceni kupljenih proizvoda.\n",
+    "Analizom podkategorija uočava se da se određeni proizvodi iz klastera prodaju u većoj meri, pa na taj način predlog može biti da se izvrši marketing proizvoda koji se prodaju u manjoj meri, ili još jači marketing proizvoda koji se već kupuju redovno.\n",
+    "Generalna prodaja iz godine u godinu je poboljšana za obe vrste klastera što znači da kompanija već radi solidan posao u polju marketinga.\n",
+    "\n",
+    "Uočava se trend gde se proizvodi u određenim državama više kupuju u periodu oko meseca januara. Predlog bi bio da se pojača marketing tokom tog perioda u ostalim državama."
+   ]
   }
  ],
  "metadata": {
